<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skate Spots</string>
    <string name="action_settings">Settings</string>
    <string name="menu_reminders">Reminder options</string>
    <string name="menu_create">Create new</string>
    <string name="menu_modify">Modify existing</string>
    <string name="menu_delete">Delete existing</string>
    <string name="title_activity_login">Login to Skate Spots</string>
    <string name="enter_user_name">User name</string>
    <string name="enter_password">Password</string>
    <string name="button_login">Login</string>
    <string name="create_new_user">Create new user</string>
    <string name="create_user">Create user</string>
    <string name="title_activity_create_user">Create new user</string>
    <string name="display_name">Display name</string>
    <string name="title_activity_wifi_and_bluetooth">WifiAndBluetooth</string>
    <string name="wifi_and_bluetooth">Wifi and Bluetooth</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_wifi">Wifi</string>
    <string name="title_activity_new_skate_spot">NewSkateSpot</string>
    <string name="delete_reminder">Click to delete a reminder</string>

    <!-- Creating new SkateSpot -->
    <string name="new_skatespot_name">Skatespottets navn</string>
    <string name="new_skatespot_description">Beskrivelse af SkateSpottet</string>
    <string name="new_skatespot_create">Opret SkateSpot!</string>
    <string name="new_skatespot_type">Type:</string>

    <!-- Info window -->
    <string name="window_name">Name: </string>
    <string name="window_type">Spot type: </string>
    <string name="window_author">Author: </string>
    <string name="window_reminder">Tap this window to toggle reminder!</string>
    <string name="title_activity_modify_skate_spots">ModifySkateSpots</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_delete_reminders">DeleteReminders</string>
    
    <string name="create_skatespot">Create Skatespot</string>

</resources>

