<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/reminders"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_reminders">
        <menu>
            <item
                android:id="@+id/menu_create"
                android:orderInCategory="102"
                android:showAsAction="never"
                android:title="@string/menu_create"/>
            
             <item
                android:id="@+id/menu_modify"
                android:orderInCategory="103"
                android:showAsAction="never"
                android:title="@string/menu_modify"/>
             
              <item
                android:id="@+id/menu_delete"
                android:orderInCategory="104"
                android:showAsAction="never"
                android:title="@string/menu_delete"/>
              
        </menu>
    </item>

</menu>