<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/new_skatespot_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_skatespot_name" />

    <EditText
        android:id="@+id/new_skatespot_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_skatespot_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:textSize="20sp"
            android:id="@+id/new_skatespot_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_skatespot_type" />

        <Spinner
            android:id="@+id/new_skatespot_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/new_skatespot_create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="createNewSkatespot"
            android:text="@string/new_skatespot_create" />
    </LinearLayout>

</LinearLayout>