<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    
    <Spinner android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />
     <EditText android:id="@+id/display_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_name"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:onClick="checkEligibilityLogin"/> <!-- Tjekker i databasen for eksistens -->
    
</LinearLayout>
